<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TV"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:hint="@string/username_or_mobile_no"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bckground"
        android:textAllCaps="false"
        android:layout_below="@+id/TV"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:hint="@string/password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bckground"
        android:textAllCaps="false"
        android:layout_below="@+id/Email"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginBT"
        android:background="@drawable/backgroundbt"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sign_up"
        android:textColor="#ffff"
        android:layout_below="@id/pass"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TV2"
        android:text="OR"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/LoginBT"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FacebookLoginBT"
        android:background="@drawable/facebookbackgroundbt"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sig_up_with_facebook"
        android:textColor="#ffff"
        android:layout_below="@id/TV2"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GoogleLoginBT"
        android:background="@drawable/googlebackgroundbt"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="Sign Up with Google"
        android:textColor="#ffff"
        android:layout_below="@id/FacebookLoginBT"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />
    <View style="@style/Divider.Horizontal"
        android:layout_below="@id/GoogleLoginBT"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/view"
        />
    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:id="@+id/TV3"
        android:layout_below="@id/view"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_account"
        android:textSize="15dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/TV4"
        android:layout_below="@id/view"
        android:layout_toRightOf="@+id/TV3"
        android:layout_marginTop="9dp"
        android:text="@string/sign_in"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        />


</RelativeLayout>